--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                                         <div class="card-body">
                                           <div class="row">
                                           <div class="col-sm-3">
-                                              <img src="assets/bored_of_the_rings.jpg" class="img-fluid" alt="Responsive image"  >
+                                              <img src="assets/not_found.png" class="img-fluid" alt="Responsive image"  >
                                           </div>
                                             <div class="col-sm-7">
                                             <p class="card-text">
@@ -83,7 +83,7 @@
                                         <div class="card-body">
                                           <div class="row">
                                           <div class="col-sm-3">
-                                              <img src="assets/russians.jpg" class="img-fluid" alt="Responsive image">
+                                              <img src="assets/not_found.png" class="img-fluid" alt="Responsive image">
                                           </div>
                                           <div class="col-sm-7">
                                             <p class="card-text">
@@ -102,7 +102,7 @@
                                         <div class="card-body">
                                           <div class="row">
                                               <div class="col-sm-3">
-                                                  <img src="assets/eating_people.jpg" class="img-fluid" alt="Responsive image">
+                                                  <img src="assets/not_found.png" class="img-fluid" alt="Responsive image">
                                               </div>
                                           <div class="col-sm-7">
                                             <p class="card-text">
